crates/ika-swarm-config/tests/snapshots/snapshot_tests__populated_genesis_snapshot_matches-5.snap
---
source: crates/ika-config/tests/snapshot_tests.rs
expression: genesis.ika_system_object()
---
info:
  id: "0x0000000000000000000000000000000000000005"
epoch: 0
validators:
  validator_stake: 1
  delegation_stake: 0
  quorum_stake_threshold: 1
  active_validators:
    - metadata:
        ika_address: "0x21b60aa9a8cb189ccbe20461dbfad2202fdef55b"
        pubkey_bytes:
          - 153
          - 242
          - 94
          - 246
          - 31
          - 128
          - 50
          - 185
          - 20
          - 99
          - 100
          - 96
          - 152
          - 44
          - 92
          - 198
          - 241
          - 52
          - 239
          - 29
          - 218
          - 231
          - 102
          - 87
          - 242
          - 203
          - 254
          - 193
          - 235
          - 252
          - 141
          - 9
          - 115
          - 116
          - 8
          - 13
          - 246
          - 252
          - 240
          - 220
          - 184
          - 188
          - 75
          - 13
          - 142
          - 10
          - 245
          - 216
          - 14
          - 187
          - 255
          - 43
          - 76
          - 89
          - 159
          - 84
          - 244
          - 45
          - 99
          - 18
          - 223
          - 195
          - 20
          - 39
          - 96
          - 120
          - 193
          - 204
          - 52
          - 126
          - 187
          - 190
          - 197
          - 25
          - 139
          - 226
          - 88
          - 81
          - 63
          - 56
          - 107
          - 147
          - 13
          - 2
          - 194
          - 116
          - 154
          - 128
          - 62
          - 35
          - 48
          - 149
          - 94
          - 189
          - 26
          - 16
        network_pubkey_bytes:
          - 68
          - 88
          - 50
          - 114
          - 78
          - 89
          - 121
          - 78
          - 114
          - 97
          - 112
          - 79
          - 43
          - 103
          - 66
          - 74
          - 112
          - 49
          - 115
          - 72
          - 81
          - 50
          - 86
          - 86
          - 115
          - 81
          - 111
          - 50
          - 103
          - 104
          - 109
          - 55
          - 97
          - 65
          - 57
          - 119
          - 86
          - 120
          - 78
          - 74
          - 49
          - 51
          - 85
          - 61
        proof_of_possession_bytes:
          - 153
          - 27
          - 35
          - 60
          - 191
          - 127
          - 114
          - 42
          - 232
          - 130
          - 78
          - 8
          - 171
          - 176
          - 156
          - 1
          - 218
          - 41
          - 15
          - 12
          - 200
          - 251
          - 161
          - 118
          - 204
          - 12
          - 207
          - 20
          - 169
          - 155
          - 183
          - 78
          - 162
          - 200
          - 239
          - 217
          - 147
          - 103
          - 123
          - 109
          - 224
          - 32
          - 216
          - 58
          - 188
          - 101
          - 131
          - 137
        name:
          - 48
        net_address: []
        next_epoch_stake: 1
        next_epoch_delegation: 0
        next_epoch_computation_price: 1
        next_epoch_commission_rate: 0
      stake_amount: 1
      pending_stake: 0
      pending_withdraw: 0
      computation_price: 1
      delegation_staking_pool:
        validator_address: "0x21b60aa9a8cb189ccbe20461dbfad2202fdef55b"
        starting_epoch: 1
        ika_balance: 0
        rewards_pool:
          value: 0
        delegation_token_supply:
          value: 0
        pending_delegations: []
        pending_withdraws: []
      commission_rate: 0
  pending_validators: []
  pending_removals: []
  next_epoch_validators:
    - ika_address: "0x21b60aa9a8cb189ccbe20461dbfad2202fdef55b"
      pubkey_bytes:
        - 153
        - 242
        - 94
        - 246
        - 31
        - 128
        - 50
        - 185
        - 20
        - 99
        - 100
        - 96
        - 152
        - 44
        - 92
        - 198
        - 241
        - 52
        - 239
        - 29
        - 218
        - 231
        - 102
        - 87
        - 242
        - 203
        - 254
        - 193
        - 235
        - 252
        - 141
        - 9
        - 115
        - 116
        - 8
        - 13
        - 246
        - 252
        - 240
        - 220
        - 184
        - 188
        - 75
        - 13
        - 142
        - 10
        - 245
        - 216
        - 14
        - 187
        - 255
        - 43
        - 76
        - 89
        - 159
        - 84
        - 244
        - 45
        - 99
        - 18
        - 223
        - 195
        - 20
        - 39
        - 96
        - 120
        - 193
        - 204
        - 52
        - 126
        - 187
        - 190
        - 197
        - 25
        - 139
        - 226
        - 88
        - 81
        - 63
        - 56
        - 107
        - 147
        - 13
        - 2
        - 194
        - 116
        - 154
        - 128
        - 62
        - 35
        - 48
        - 149
        - 94
        - 189
        - 26
        - 16
      network_pubkey_bytes:
        - 68
        - 88
        - 50
        - 114
        - 78
        - 89
        - 121
        - 78
        - 114
        - 97
        - 112
        - 79
        - 43
        - 103
        - 66
        - 74
        - 112
        - 49
        - 115
        - 72
        - 81
        - 50
        - 86
        - 86
        - 115
        - 81
        - 111
        - 50
        - 103
        - 104
        - 109
        - 55
        - 97
        - 65
        - 57
        - 119
        - 86
        - 120
        - 78
        - 74
        - 49
        - 51
        - 85
        - 61
      proof_of_possession_bytes:
        - 153
        - 27
        - 35
        - 60
        - 191
        - 127
        - 114
        - 42
        - 232
        - 130
        - 78
        - 8
        - 171
        - 176
        - 156
        - 1
        - 218
        - 41
        - 15
        - 12
        - 200
        - 251
        - 161
        - 118
        - 204
        - 12
        - 207
        - 20
        - 169
        - 155
        - 183
        - 78
        - 162
        - 200
        - 239
        - 217
        - 147
        - 103
        - 123
        - 109
        - 224
        - 32
        - 216
        - 58
        - 188
        - 101
        - 131
        - 137
      name:
        - 48
      net_address: []
      next_epoch_stake: 1
      next_epoch_delegation: 0
      next_epoch_computation_price: 1
      next_epoch_commission_rate: 0
  pending_delegation_switches:
    contents: []
treasury_cap:
  value: 100000000000001
storage_fund:
  value: 100000000000000
parameters:
  min_validator_stake: 100000000000000
  max_validator_candidate_count: 100
  storage_computation_price: 1
computation_price_per_unit_size: 0
validator_report_records:
  contents: []
next_epoch_stake_subsidy: 1000000

