crates/ika-swarm-config/tests/snapshots/snapshot_tests__populated_genesis_snapshot_matches.snap
---
source: crates/ika-config/tests/snapshot_tests.rs
expression: genesis.ika_system_wrapper_object()
---
id:
  id: "0x0000000000000000000000000000000000000000000000000000000000000005"
version: 1

